# Projet_Cpp

./: CMakeLists.txt  Camera.cpp  CollisionManager.cpp  CollisionManager.h  Enemy.h  Entity.h  Player.cpp  Player.h  README.md  Settings.h  Update.cpp
include/: Camera.h  Entity.cpp  Score.h  Update.h
src/: Game.cpp
